# RayRust

./: Cargo.toml  README.md  run
shaders/: ray_tracer.wgsl
src/: bababoi.rs  camera.rs  color.rs  gpu.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  ray.rs  sphere.rs  vec3.rs
