[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

# GPU dependencies (optional)
wgpu = { version = "0.19.1", optional = true }
pollster = { version = "0.3.0", optional = true }
bytemuck = { version = "1.14.0", features = ["derive"], optional = true }
image = { version = "0.24.7", optional = true }
env_logger = { version = "0.10.1", optional = true }
log = { version = "0.4.20", optional = true }
winit = { version = "0.29.10", optional = true }
futures = { version = "0.3.29", optional = true }

[features]
default = []
gpu = ["wgpu", "pollster", "bytemuck", "image", "env_logger", "log", "winit", "futures"]
